# DeepMAge

./: .gitignore  DeepMAge_data_partition.txt  DeepMAge_predictions.txt  download_resources_methylprep.sh  kill_processes.sh  original_353_clock_predictions.txt  pyproject.toml  run_parallel.sh  run_processes.sh
modules/: aaa.py  aaa_2.py  aaa_3.py  api_handler.py  df_age.py  df_compare.py  df_explorer.py  df_handler.py  gse_ids.py  gse_ids_by_source.py  leftovers.py  metadata.py  methylation_data.py  methylation_data_2.py  methylation_data_3.py  ml_common.py  ml_configs.py  ml_hyperopt.py  ml_option_3.py  ml_optuna_1.py  ml_pipeline.py  ml_prediction.py  study_explorer.py  study_handler.py
resources/: de_novo_linear_model_verification_predictions.txt
result_artifacts_temp/: result_df_optuna_1.parquet  study_optuna_1.pkl
testing/: aaa.py  print_config_ids_from_logs.py
