[tool.poetry]
name = "DeepMAge"
version = "0.1.0"
description = ""
authors = ["Martin Klosi <roise3000@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
hyperopt = "*"
methylprep = "*"
numpy = "^1.24.3"
optuna = "*"
pandas = "1.3.5"
portalocker = "*"
psutil = "*"
pyarrow = "^17.0.0"
pytest = "*"
python = "~3.10"
requests = "*"
setproctitle = "*"
scikit-learn = "*"
timeout-decorator = "*"
torch = "*"
torchmetrics = "*"
torchvision = "*"
#torch-early-stopping = "*" # &&&

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
